// Copyright 2022 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum BigqueryRoutineRoutineTypeEnum {
  BigqueryRoutineRoutineTypeEnumNO_VALUE_DO_NOT_USE = 0;
  BigqueryRoutineRoutineTypeEnumROUTINE_TYPE_UNSPECIFIED = 1;
  BigqueryRoutineRoutineTypeEnumSCALAR_FUNCTION = 2;
  BigqueryRoutineRoutineTypeEnumPROCEDURE = 3;
}

enum BigqueryRoutineLanguageEnum {
  BigqueryRoutineLanguageEnumNO_VALUE_DO_NOT_USE = 0;
  BigqueryRoutineLanguageEnumLANGUAGE_UNSPECIFIED = 1;
  BigqueryRoutineLanguageEnumSQL = 2;
  BigqueryRoutineLanguageEnumJAVASCRIPT = 3;
}

enum BigqueryRoutineArgumentsArgumentKindEnum {
  BigqueryRoutineArgumentsArgumentKindEnumNO_VALUE_DO_NOT_USE = 0;
  BigqueryRoutineArgumentsArgumentKindEnumARGUMENT_KIND_UNSPECIFIED = 1;
  BigqueryRoutineArgumentsArgumentKindEnumFIXED_TYPE = 2;
  BigqueryRoutineArgumentsArgumentKindEnumANY_TYPE = 3;
}

enum BigqueryRoutineArgumentsModeEnum {
  BigqueryRoutineArgumentsModeEnumNO_VALUE_DO_NOT_USE = 0;
  BigqueryRoutineArgumentsModeEnumMODE_UNSPECIFIED = 1;
  BigqueryRoutineArgumentsModeEnumIN = 2;
  BigqueryRoutineArgumentsModeEnumOUT = 3;
  BigqueryRoutineArgumentsModeEnumINOUT = 4;
}

enum BigqueryRoutineArgumentsDataTypeTypeKindEnum {
  BigqueryRoutineArgumentsDataTypeTypeKindEnumNO_VALUE_DO_NOT_USE = 0;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumTYPE_KIND_UNSPECIFIED = 1;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumINT64 = 2;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumBOOL = 3;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumFLOAT64 = 4;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumSTRING = 5;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumBYTES = 6;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumTIMESTAMP = 7;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumDATE = 8;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumTIME = 9;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumDATETIME = 10;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumINTERVAL = 11;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumGEOGRAPHY = 12;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumNUMERIC = 13;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumBIGNUMERIC = 14;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumJSON = 15;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumARRAY = 16;
  BigqueryRoutineArgumentsDataTypeTypeKindEnumSTRUCT = 17;
}

enum BigqueryRoutineDeterminismLevelEnum {
  BigqueryRoutineDeterminismLevelEnumNO_VALUE_DO_NOT_USE = 0;
  BigqueryRoutineDeterminismLevelEnumDETERMINISM_LEVEL_UNSPECIFIED = 1;
  BigqueryRoutineDeterminismLevelEnumDETERMINISTIC = 2;
  BigqueryRoutineDeterminismLevelEnumNOT_DETERMINISTIC = 3;
}

message BigqueryRoutine {
  string etag = 1;
  string name = 2;
  string project = 3;
  string dataset = 4;
  BigqueryRoutineRoutineTypeEnum routine_type = 5;
  int64 creation_time = 6;
  int64 last_modified_time = 7;
  BigqueryRoutineLanguageEnum language = 8;
  repeated BigqueryRoutineArguments arguments = 9;
  BigqueryRoutineArgumentsDataType return_type = 10;
  repeated string imported_libraries = 11;
  string definition_body = 12;
  string description = 13;
  BigqueryRoutineDeterminismLevelEnum determinism_level = 14;
  bool strict_mode = 15;
}

message BigqueryRoutineArguments {
  string name = 1;
  BigqueryRoutineArgumentsArgumentKindEnum argument_kind = 2;
  BigqueryRoutineArgumentsModeEnum mode = 3;
  BigqueryRoutineArgumentsDataType data_type = 4;
}

message BigqueryRoutineArgumentsDataType {
  BigqueryRoutineArgumentsDataTypeTypeKindEnum type_kind = 1;
  BigqueryRoutineArgumentsDataType array_element_type = 2;
  BigqueryRoutineArgumentsDataTypeStructType struct_type = 3;
}

message BigqueryRoutineArgumentsDataTypeStructType {
  repeated BigqueryRoutineArgumentsDataTypeStructTypeFields fields = 1;
}

message BigqueryRoutineArgumentsDataTypeStructTypeFields {
  string name = 1;
  BigqueryRoutineArgumentsDataType type = 2;
}

message ApplyBigqueryRoutineRequest {
  BigqueryRoutine resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteBigqueryRoutineRequest {
  string service_account_file = 1;
  BigqueryRoutine resource = 2;
}

message ListBigqueryRoutineRequest {
  string service_account_file = 1;
  string Project = 2;
  string Dataset = 3;
}

message ListBigqueryRoutineResponse {
  repeated BigqueryRoutine items = 1;
}

service BigqueryRoutineService {
  rpc ApplyBigqueryRoutine(ApplyBigqueryRoutineRequest) returns (BigqueryRoutine);
  rpc DeleteBigqueryRoutine(DeleteBigqueryRoutineRequest) returns (google.protobuf.Empty);
  rpc ListBigqueryRoutine(ListBigqueryRoutineRequest) returns (ListBigqueryRoutineResponse);
}
